# BIMSA

./: .gitignore  batch_run_wo_sym.bat  best_student_0.1.0-distill.pth  distilled.txt  env_setup.sh  extracted_rule.json  final_student_0.1.0-distill.pth  generate_data.bat  generate_data.sh  generated_rules_example.py  main.py  profile.html  pyproject.toml  run_life_predict_autodl.sh  run_life_predict_local.sh  run_simplelife_predict_autodl.sh  run_simplelife_predict_local.bat  run_simplelife_predict_local.sh  run_simplelife_predict_local_offline.bat  test.ipynb  test.py  todolist.md  vicsek.ipynb  vicsek.py  visualize_kernels.py
batch_result/2025-09-29_20-21-06_multiscale_0__200-200-B36_S23/: best_simple_life_MultiScale_0.2.0.pth
batch_result/2025-09-29_20-31-20_multiscale_0__200-200-B35678_S5678/: last_simple_life_MultiScale_0.2.0.pth
batch_result/2025-09-29_20-36-17_multiscale_0__200-200-B2_S/: best_simple_life_MultiScale_0.2.0.pth  last_simple_life_MultiScale_0.2.0.pth
batch_result_2/2025-10-12_17-46-14_small_2_layer_seq_p4cnn__200-200-B3_S23/: best_simple_life_SimpleP4CNNSmall_0.1.0-p4.pth  last_simple_life_SimpleP4CNNSmall_0.1.0-p4.pth
batch_result_2/2025-10-12_17-54-01_small_2_layer_seq_p4cnn__200-200-B36_S23/: best_simple_life_SimpleP4CNNSmall_0.1.0-p4.pth  last_simple_life_SimpleP4CNNSmall_0.1.0-p4.pth
batch_result_2/2025-10-12_19-29-31_multiscale_0__200-200-B3_S23/: best_simple_life_MultiScale_0.2.0.pth  (+1 more)
paper/: main.tex  ref.bib  tmp.tex
predictor_active/: dataloader.py  in.py  life1.py  main.py  model_conv.py  rule_simulator.py  test_motif.ipynb  train_test.py
predictor_life/: dataloader.py  in.py  life.py  life1.py  model_conv.py  test.ipynb  train_test.py  train_test_simple.py
predictor_life_simple/: DISTILLATION_README.md  SYMBOLIC_EXTRACTION_README.md  args.py  batch_process_erf.py  best_student_0.1.0-distill.pth  check_erf.ipynb  dataloader.py  distillation.py  example_symbolic_extraction.py  extract_symbolic_rules.py  final_student_0.1.0-distill.pth  larger_than_life.py  life.py  life1.py  model_conv.py  neighborhood_inference.py  nn_utils.py  rule_simulator.py  run_distillation_example.py  test_p4cnn.ipynb  test_trained_param.ipynb  test_weight.ipynb  train_test.py  train_test_simple.py  visualize_state_dict.py  项目动机质疑.docx
trajectory_viewer/: main.py
(+711 files in other folders)
