[project]
name = "bimsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "flashtorch>=0.1.3",
    "ipykernel>=6.30.1",
    "jax>=0.5.3",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy<=1.26",
    "toml>=0.10.2",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]
