[project]
name = "bimsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "e2cnn>=0.2.3",
    "einops>=0.8.1",
    "flashtorch>=0.1.3",
    "ipykernel>=6.30.1",
    "jax>=0.5.3",
    "jaxtyping>=0.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy<=1.26",
    "pandas>=2.3.2",
    "pyseagull>=1.0.0b4",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]
